--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.43.7",
         "react-scripts": "5.0.1",
+        "react-textarea-autosize": "^8.4.1",
         "styled-components": "^5.3.9",
         "typescript": "^4.9.5",
         "uuid": "^9.0.0",
