--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "notes-app",
-    "homepage": "https://alissse271.github.io/notes-app/",
+    "homepage": "https://alissse271.github.io",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
